# greeter

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/widget/: date_time.rs  mod.rs  time.rs  weather.rs
