[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "A simple greeter for your terminal that can give you useful info before you embark on a programming journey"
homepage = "https://github.com/henry-lang/greeter"
documentation = "https://github.com/henry-lang/greeter"
repository = "https://github.com/henry-lang/greeter"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
home = "0.5.3"
reqwest = {version = "0.11.10", features = ["blocking", "json"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
username = "0.2.0"
